test/should-fail/javaLangImport.fx
/*
 * Verify java.lang classes must be imported.
 * 
 * @test/fail javaLangImport.fx
 */
System.out.println("hello, world"); // no java.lang.System import
